drivers/gpu/drm/amd/pm/powerplay/hwmgr/vega10_thermal.c
@@ -371,9 +371,8 @@ static int vega10_thermal_set_temperature_range(struct pp_hwmgr *hwmgr,
 	int high = VEGA10_THERMAL_MAXIMUM_ALERT_TEMP;
 	uint32_t val;
 
-	/* compare them in unit celsius degree */
-	if (low < range->min / PP_TEMPERATURE_UNITS_PER_CENTIGRADES)
-		low = range->min / PP_TEMPERATURE_UNITS_PER_CENTIGRADES;
+	if (low < range->min)
+		low = range->min;
 	if (high > tdp_table->usSoftwareShutdownTemp)
 		high = tdp_table->usSoftwareShutdownTemp;
 
